# transf

./: .gitignore  Makefile  README.md  transf.cabal
src/: Main.hs
src/Text/: Transf.hs
src/Text/Transf/: Process.hs
