
name:               transf
version:            0.5
cabal-version:      >= 1.6
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           Text transformer and interpreter.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    To be written.

source-repository head
  type:             git
  location:         git://github.com/hanshoglund/transf.git
  
library                    
    build-depends: 
        base >= 4 && < 5,
        semigroups,
        containers,
        mtl,
        filepath,
        process,
        hint
    hs-source-dirs: src
    exposed-modules:
        Text.Transf
    