
name:               transf
version:            0.5
cabal-version:      >= 1.6
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           Text transformer and interpreter.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    To be written.

source-repository head
  type:             git
  location:         git://github.com/hanshoglund/transf.git
  
library                    
    build-depends: 
        base >= 4 && < 5,
        semigroups,
        containers,
        mtl,
        monadplus,
        filepath,
        process,      
        hashable,
        hint,
        music-preludes
    hs-source-dirs: src
    exposed-modules:
        Text.Transf

executable "transf"
    ghc-options: -O3 -threaded
    hs-source-dirs: src
    main-is: Main.hs
